# docs/swagger.json
@@ -820,7 +820,7 @@
                     {
                         "type": "string",
                         "description": "用户头像的对象存储地址",
-                        "name": "icon",
+                        "name": "icon_url",
                         "in": "query"
                     },
                     {
@@ -830,7 +830,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "账号名称，昵称",
+                        "description": "账号名称，昵称，全局唯一",
                         "name": "name",
                         "in": "query"
                     },
@@ -915,6 +915,13 @@
                         "schema": {
                             "$ref": "#/definitions/model.User"
                         }
+                    },
+                    {
+                        "type": "file",
+                        "description": "用户头像",
+                        "name": "icon_file",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1187,7 +1194,7 @@
                         "type": "integer"
                     }
                 },
-                "icon": {
+                "icon_url": {
                     "description": "用户头像的对象存储地址",
                     "type": "string"
                 },
@@ -1195,7 +1202,7 @@
                     "type": "integer"
                 },
                 "name": {
-                    "description": "账号名称，昵称",
+                    "description": "账号名称，昵称，全局唯一",
                     "type": "string"
                 },
                 "updated_at": {
