# server/user.go
@@ -27,6 +27,7 @@ func NewUserServer(userService *service.UserService, client *common.OssClient) *
 // @Summary	注册用户信息
 // @Tags 用户
 // @Param        user  body      model.User  true  "用户信息"
+// @Param        icon_file formData file true "用户头像"
 // @Success	200 {object}  model.User "注册结果"
 // @Failure	400 {string}  string      "请求体异常"
 // @Failure	500 {string}  string      "服务端异常"
